--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.21",
+    "expo": "~51.0.24",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.1.0",
-    "react-native-pager-view": "6.3.0"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
